RESOLVED FIXED150229
[GStreamer] ASSERTION FAILED: !m_adoptionIsRequired in MediaSourceGStreamer::addSourceBuffer
https://bugs.webkit.org/show_bug.cgi?id=150229
Summary [GStreamer] ASSERTION FAILED: !m_adoptionIsRequired in MediaSourceGStreamer::...
Carlos Garcia Campos
Reported 2015-10-16 03:19:18 PDT
This happens in the debug bot in all media source tests that run that code. The problem is that we are creating a RefPtr without adopting the reference. The ownerships there are not very clear anyway.
Attachments
Patch (4.46 KB, patch)
2015-10-16 03:25 PDT, Carlos Garcia Campos
pnormand: review+
Carlos Garcia Campos
Comment 1 2015-10-16 03:25:28 PDT
Carlos Garcia Campos
Comment 2 2015-10-16 03:48:16 PDT
Note You need to log in before you can comment on or make changes to this bug.