Source/WebCore/platform/graphics/gstreamer/SourceBufferPrivateGStreamer.h
@@ -43,7 +43,7 @@ namespace WebCore {
 
 class SourceBufferPrivateGStreamer final : public SourceBufferPrivate {
 public:
-    SourceBufferPrivateGStreamer(PassRefPtr<MediaSourceClientGStreamer>, const ContentType&);
+    static Ref<SourceBufferPrivateGStreamer> create(MediaSourceClientGStreamer&, const ContentType&);
     virtual ~SourceBufferPrivateGStreamer();
 
     virtual void setClient(SourceBufferPrivateClient*);
@@ -63,6 +63,8 @@ public:
     virtual void notifyClientWhenReadyForMoreSamples(AtomicString);
 
 private:
+    SourceBufferPrivateGStreamer(MediaSourceClientGStreamer&, const ContentType&);
+
     ContentType m_type;
     RefPtr<MediaSourceClientGStreamer> m_client;
     SourceBufferPrivateClient* m_sourceBufferPrivateClient;
